--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -22,7 +22,7 @@
                 <p style="font-size: 10px;"><a href="https://br.freepik.com/vetores-gratis/mosquito_4426158.htm#query=mosquito%20dengue&position=1&from_view=keyword&track=ais&uuid=751fe4ed-e612-4857-b625-156c286c6dc0">Imagem de macrovector_official</a> no Freepik</p>
             </div>
             <div class="col-4 text-center">
-                <a class="text-body-emphasis text-decoration-none" href="#">10 Minutos contra da Dengue</a>
+                <a class="text-body-emphasis text-decoration-none" href="#">10 Minutos contra a Dengue</a>
             </div>
             <div class="col-4 text-center">
                 
