--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -114,7 +114,7 @@
               </button>
             </div>
             <div class="col-auto">
-              <button id="save-checklist-web" class="btn btn-primary" type="submit">
+              <button id="save-checklist-web" class="btn btn-primary" type="button">
                 <i class="bi bi-floppy-fill" style="font-size: 28px;"></i>
               </button>
             </div>
