Textos nos modais

--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -80,7 +80,7 @@
                   </button>                 
                 </th>
                 <th class="th-icone">
-                  <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-pocas" data-tt="tooltip" data-bs-title="Poças de água">
+                  <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-pocas" data-tt="tooltip" data-bs-title="Acúmulos de água">
                     <img src="img/pocas.png" alt="Data" style="max-width: 48px;">
                   </button>                
                 </th>
@@ -143,7 +143,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/datadia-modal.png" alt="Calendário" style="max-width: 180px;">
+              <img src="img/datadia-modal.png" alt="Calendário" style="max-width: 280px;">
             </div>
             <div class="modal-body">
               <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
@@ -165,11 +165,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/caixa-modal.png" alt="Caixa d'água" style="max-width: 180px;">
+              <img src="img/caixa-modal.png" alt="Caixa d'água" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>A caixa d'água de sua casa deve estar <b>totalmente vedada.</b>.</p> 
+              <p>Para essa verificação, você deverá contar com a <b>ajuda de seus pais e/ou responsáveis</b>. Por isso, <b>peça educadamente</b> e lembre-se que é tudo por uma boa causa!</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -187,11 +187,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/galao-modal.png" alt="Galão d'água" style="max-width: 180px;"><p style="font-size: 10px;">Origem: https://www.healthline.com/nutrition/gallon-of-water-a-day#waters-importance</p>
+              <img src="img/galao-modal.png" alt="Galão d'água" style="max-width: 280px;"><p style="font-size: 10px;">Origem: https://www.healthline.com/nutrition/gallon-of-water-a-day#waters-importance</p>
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Assim como a caixa d'água, os galões, tonéis, poços e latões devem estar <b>totalmente vedados</b> para evitar proliferação de mosquitos.</p> 
+              <p>Como antes, você poderá precisar da <b>ajuda de seus pais e/ou responsáveis</b> para essa tarefa.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -209,11 +209,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/vaso-modal.png" alt="Vasos de planta" style="max-width: 180px;">
+              <img src="img/vaso-modal.png" alt="Vasos de planta" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Os pratos com água que ficam embaixo dos vasos de planta <b>devem ser evitados</b>, pois acumulam água por muito tempo.</p> 
+              <p>O prato de água pode ser substituído por <b>pratos preenchidos por areia</b> ou <b>lavados semanalmente</b> com bucha.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -231,11 +231,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/balde-modal.jpg" alt="Baldes" style="max-width: 180px;">
+              <img src="img/balde-modal.jpg" alt="Baldes" style="max-width: 200px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Tome cuidado com a forma que os baldes são guardados.</p>
+              <p>Para evitar acúmulo de água, os baldes devem estar virados com a <b>boca para baixo</b>.</p> 
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -253,11 +253,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/garrafa-modal.jpg" alt="Garrafas" style="max-width: 180px;">
+              <img src="img/garrafa-modal.jpg" alt="Garrafas" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Assim como baldes, as garrafas acumulam muita água se estiverem com a boca para cima.</p> 
+              <p>Caso não você não possa jogar uma garrafa fora, você deve deixa-la de boca para baixo.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -275,11 +275,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/pneu-modal.jpg" alt="Pneus" style="max-width: 180px;">
+              <img src="img/pneu-modal.jpg" alt="Pneus" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Pneus também podem acumular água se não estiverem protegidos da chuva.</p> 
+              <p>Por isso, os pneus devem ser guardados em locais cobertos ou serem protegidos com lona.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -297,11 +297,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/piscina-modal.jpg" alt="Piscina" style="max-width: 180px;">
+              <img src="img/piscina-modal.jpg" alt="Piscina" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Piscinas que não forem tratadas corretamente tornam-se um foco perigosíssimo para proliferação de mosquitos.</p> 
+              <p>As piscinas devem ser limpas e tratadas com produtos químicos (deixe essa parte para um adulto) e, se possível, cobertas por uma capa quando não estiver sendo usada.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -315,15 +315,16 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="modalPocas">Poças</h1>
+              <h1 class="modal-title fs-5" id="modalPocas">Poças e água acumulada</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/pocas-modal.png" alt="Poças" style="max-width: 180px;">
+              <img src="img/pocas-modal.png" alt="Poças" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>O chão dentro e fora de casa devem estar sempre secos no dia a dia.</p> 
+              <p>É necessário que se retire a água dos pátios com o uso de rodos e, no geral, se verifique possíveis vazamentos molhando o local.</p>
+              <p>Caso um local tenha um ralo para saída da água, deve-se mantê-lo limpo para que não haja bloqueio.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -341,11 +342,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/pote-modal.png" alt="Potes dos pets" style="max-width: 180px;"><p style="font-size: 10px;">Origem: https://www.bigberkeywaterfilters.com/blog/Filtered-Water-for-Pets</p>
+              <img src="img/pote-modal.png" alt="Potes dos pets" style="max-width: 280px;"><p style="font-size: 10px;">Origem: https://www.bigberkeywaterfilters.com/blog/Filtered-Water-for-Pets</p>
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Os potes de água dos bichinhos de estimação devem receber alguns cuidados.</p> 
+              <p>Deve-se diariamente trocar a água e lavar o pote para evitar acúmulo de sujeira e proliferação de larvas de mosquito.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -363,11 +364,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/entulho-modal.jpg" alt="Entulho" style="max-width: 180px;">
+              <img src="img/entulho-modal.jpg" alt="Entulho" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Locais com entulho que não estejam cobertos podem acumular bastante água.</p> 
+              <p>Para evitar isso, é necessário que o entulho seja coberto por lona bem esticada.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
@@ -385,11 +386,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/calha-modal.jpg" alt="Calha" style="max-width: 180px;">
+              <img src="img/calha-modal.jpg" alt="Calha" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
-              <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
+              <p>Algumas casas possuem calhas para direcionar a água da chuva que cai no telhado.</p> 
+              <p>Se for o seu caso, Peça ajuda a um adulto para limpar ela ocasionalmente para retirada de folhas e sujeira.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ok, entendi</button>
