--- a/index.html
+++ b/index.html
@@ -7,29 +7,16 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="/icon-font/bootstrap-icons.min.css">
-    <title>10Minutos</title>
+    <link rel="stylesheet" href="css/index.css" type="text/css">
+    <title>Projeto ACS</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="row align-items-center">
-                <div class="col-4 text-center">
-                    
-                </div>
-                <div class="col-4 text-center">
-                    <a class="text-body-emphasis text-decoration-none" href="#">10 Minutos contra da Dengue</a>
-                </div>
-                <div class="col-4 text-center">
-                    
-                </div>
-            </div>
-        </header>
-
-        <div class="row g-5">
-            <div class="col-9">
-                <a href="/checklist">Clique aqui para acessar o checklist</a>
+    <div class="container-fluid fit-screen">
+        <div class="row g-5 fit-container">
+            <div class="col left-side">
+                <a href="/checklist"><img class="image" src="img/logo-branca.png" alt="Checklist 10 minutos"></a>
             </div>  
-            <div class="col-3">
+            <div class="col right-side">
 
             </div>
         </div>
