--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/icon-font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/checklist.css" type="text/css">
 
-    <title>10Minutos</title>
+    <title>Checklist 10 Minutos</title>
 </head>
 <body>
   <div id="submitted-form-container" hidden>
@@ -18,8 +18,8 @@
   <div class="container" style="overflow-x: hidden;">
     <header>
         <div class="row align-items-center">
-            <div class="col-4 text-center">
-                
+            <div class="col-4">
+                <a href="/" style="font-size: 18px;">Página Inicial</a>
             </div>
             <div class="col-4 text-center">
               <img src="img/logo-preta.png" alt="Checklist 10 Minutos" style="max-height: 60px;">
