Início da criação do Quiz

--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -8,7 +8,7 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="/icon-font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/checklist.css" type="text/css">
+    <link rel="stylesheet" href="/checklist/checklist.css" type="text/css">
 
     <title>Checklist 10 Minutos</title>
 </head>
@@ -21,11 +21,8 @@
             <div class="col-4">
                 <a href="/" style="font-size: 18px;">Página Inicial</a>
             </div>
-            <div class="col-4 text-center">
-              <img src="img/logo-preta.png" alt="Checklist 10 Minutos" style="max-height: 60px;">
-            </div>
-            <div class="col-4 text-center">
-                
+            <div class="col-4">
+              <img class="img-fluid" src="/img/logo-preta.png" alt="Checklist 10 Minutos" style="max-height: 60px;">
             </div>
         </div>
     </header>
@@ -39,65 +36,65 @@
               <tr>
                 <th class="th-data">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-datadia" data-tt="tooltip" data-bs-title="Data da semana">
-                    <img src="img/date.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/date.png" alt="Data" style="max-width: 48px;">
                   </button>  
                 </th>
 
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-caixa" data-tt="tooltip" data-bs-title="Caixa d'água">
-                    <img src="img/caixa.png" alt="Caixa d'água" style="max-width: 48px;">
+                    <img src="/img/caixa.png" alt="Caixa d'água" style="max-width: 48px;">
                   </button>  
                 </th>
 
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-galao" data-tt="tooltip" data-bs-title="Galao d'água">
-                    <img src="img/galao.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/galao.png" alt="Data" style="max-width: 48px;">
                   </button>
                 </th>
 
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-vaso" data-tt="tooltip" data-bs-title="Vasos de planta">
-                    <img src="img/vaso.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/vaso.png" alt="Data" style="max-width: 48px;">
                   </button>          
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-balde" data-tt="tooltip" data-bs-title="Baldes">
-                    <img src="img/balde.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/balde.png" alt="Data" style="max-width: 48px;">
                   </button>               
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-garrafa" data-tt="tooltip" data-bs-title="Garrafas">
-                    <img src="img/garrafa.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/garrafa.png" alt="Data" style="max-width: 48px;">
                   </button>              
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-pneu" data-tt="tooltip" data-bs-title="Pneus">
-                    <img src="img/pneu.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/pneu.png" alt="Data" style="max-width: 48px;">
                   </button>             
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-piscina" data-tt="tooltip" data-bs-title="Piscina">
-                    <img src="img/piscina.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/piscina.png" alt="Data" style="max-width: 48px;">
                   </button>                 
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-pocas" data-tt="tooltip" data-bs-title="Acúmulos de água">
-                    <img src="img/pocas.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/pocas.png" alt="Data" style="max-width: 48px;">
                   </button>                
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-pote" data-tt="tooltip" data-bs-title="Potes dos pets">
-                    <img src="img/pote.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/pote.png" alt="Data" style="max-width: 48px;">
                   </button>              
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-entulho" data-tt="tooltip" data-bs-title="Entulho">
-                    <img src="img/entulho.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/entulho.png" alt="Data" style="max-width: 48px;">
                   </button>              
                 </th>
                 <th class="th-icone">
                   <button class="btn btn-white" type="button" data-bs-toggle="modal" data-bs-target="#modal-calha" data-tt="tooltip" data-bs-title="Calha do telhado">
-                    <img src="img/calha.png" alt="Data" style="max-width: 48px;">
+                    <img src="/img/calha.png" alt="Data" style="max-width: 48px;">
                   </button>                
                 </th>
                 <th class="th-icone"></th>
@@ -147,7 +144,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/datadia-modal.png" alt="Calendário" style="max-width: 280px;">
+              <img src="/img/datadia-modal.png" alt="Calendário" style="max-width: 280px;">
             </div>
             <div class="modal-body">
               <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
@@ -169,7 +166,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/caixa-modal.png" alt="Caixa d'água" style="max-width: 280px;">
+              <img src="/img/caixa-modal.png" alt="Caixa d'água" style="max-width: 280px;">
             </div>
             <div class="modal-body">
               <p>A caixa d'água de sua casa deve estar <b>totalmente vedada.</b>.</p> 
@@ -191,7 +188,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/galao-modal.png" alt="Galão d'água" style="max-width: 200px;"><p style="font-size: 10px;">Origem: https://www.healthline.com/nutrition/gallon-of-water-a-day#waters-importance</p>
+              <img src="/img/galao-modal.png" alt="Galão d'água" style="max-width: 200px;"><p style="font-size: 10px;">Origem: https://www.healthline.com/nutrition/gallon-of-water-a-day#waters-importance</p>
             </div>
             <div class="modal-body">
               <p>Assim como a caixa d'água, os galões, tonéis, poços e latões devem estar <b>totalmente vedados</b> para evitar proliferação de mosquitos.</p> 
@@ -213,7 +210,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/vaso-modal.png" alt="Vasos de planta" style="max-width: 200px;">
+              <img src="/img/vaso-modal.png" alt="Vasos de planta" style="max-width: 200px;">
             </div>
             <div class="modal-body">
               <p>Os pratos com água que ficam embaixo dos vasos de planta <b>devem ser evitados</b>, pois acumulam água por muito tempo.</p> 
@@ -235,7 +232,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/balde-modal.jpg" alt="Baldes" style="max-width: 200px;">
+              <img src="/img/balde-modal.jpg" alt="Baldes" style="max-width: 200px;">
             </div>
             <div class="modal-body">
               <p>Tome cuidado com a forma que os baldes são guardados.</p>
@@ -257,7 +254,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/garrafa-modal.jpg" alt="Garrafas" style="max-width: 280px;">
+              <img src="/img/garrafa-modal.jpg" alt="Garrafas" style="max-width: 280px;">
             </div>
             <div class="modal-body">
               <p>Assim como baldes, as garrafas acumulam muita água se estiverem com a boca para cima.</p> 
@@ -279,7 +276,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/pneu-modal.jpg" alt="Pneus" style="max-width: 280px;">
+              <img src="/img/pneu-modal.jpg" alt="Pneus" style="max-width: 280px;">
             </div>
             <div class="modal-body">
               <p>Pneus também podem acumular água se não estiverem protegidos da chuva.</p> 
@@ -301,7 +298,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/piscina-modal.jpg" alt="Piscina" style="max-width: 220px;">
+              <img src="/img/piscina-modal.jpg" alt="Piscina" style="max-width: 220px;">
             </div>
             <div class="modal-body">
               <p>Piscinas que não forem tratadas corretamente tornam-se um foco perigosíssimo para proliferação de mosquitos.</p> 
@@ -323,7 +320,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/pocas-modal.png" alt="Poças" style="max-width: 220px;">
+              <img src="/img/pocas-modal.png" alt="Poças" style="max-width: 220px;">
             </div>
             <div class="modal-body">
               <p>O chão dentro e fora de casa devem estar sempre secos no dia a dia.</p> 
@@ -346,7 +343,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/pote-modal.png" alt="Potes dos pets" style="max-width: 280px;"><p style="font-size: 10px;">Origem: https://www.bigberkeywaterfilters.com/blog/Filtered-Water-for-Pets</p>
+              <img src="/img/pote-modal.png" alt="Potes dos pets" style="max-width: 280px;"><p style="font-size: 10px;">Origem: https://www.bigberkeywaterfilters.com/blog/Filtered-Water-for-Pets</p>
             </div>
             <div class="modal-body">
               <p>Os potes de água dos bichinhos de estimação devem receber alguns cuidados.</p> 
@@ -368,7 +365,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/entulho-modal.jpg" alt="Entulho" style="max-width: 280px;">
+              <img src="/img/entulho-modal.jpg" alt="Entulho" style="max-width: 280px;">
             </div>
             <div class="modal-body">
               <p>Locais com entulho que não estejam cobertos podem acumular bastante água.</p> 
@@ -390,7 +387,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" style="text-align: center;">
-              <img src="img/calha-modal.jpg" alt="Calha" style="max-width: 280px;">
+              <img src="/img/calha-modal.jpg" alt="Calha" style="max-width: 280px;">
             </div>
             <div class="modal-body">
               <p>Algumas casas possuem calhas para direcionar a água da chuva que cai no telhado.</p> 
@@ -405,6 +402,6 @@
       
     </div>
   </div>
-  <script src="js/checklist.js"></script>
+  <script src="/checklist/checklist.js"></script>
 </body>
-</html>
+</html> 
