--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="/checklist"><img class="image" src="img/logo-branca.png" alt="Checklist 10 minutos"></a>
             </div>  
             <div class="col right-side">
-
+                <a href="/quiz">Acessar o quiz</a>
             </div>
         </div>
     </div>
