--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -109,22 +109,22 @@
         <div class="fixed-bottom">
           <div class=" row gx-5 align-items-center" id="button-bar">
             <div class="col-auto">
-              <button id="add-checklist" name="add-checklist" class="btn btn-light" type="button">
+              <button id="add-checklist" name="add-checklist" class="btn btn-light" type="button" data-tt="tooltip" data-bs-title="Adicionar dia">
                 <i class="bi bi-plus-circle" style="font-size: 28px;"></i>
               </button>
             </div>
             <div class="col-auto">
-              <button id="save-checklist-web" class="btn btn-primary" type="submit">
+              <button id="save-checklist-web" class="btn btn-primary" type="submit" data-tt="tooltip" data-bs-title="Salvar no navegador">
                 <i class="bi bi-floppy-fill" style="font-size: 28px;"></i>
               </button>
             </div>
             <div class="col-auto">
-              <button id="save-checklist-device" class="btn btn-primary" type="submit">
+              <button id="save-checklist-device" class="btn btn-primary" type="submit" data-tt="tooltip" data-bs-title="Baixar checklist">
                 <i class="bi bi-download" style="font-size: 28px;"></i>
               </button>
             </div>
             <div class="col-auto">
-              <button id="load-checklist" class="btn btn-secondary" type="button">
+              <button id="load-checklist" class="btn btn-secondary" type="button" data-tt="tooltip" data-bs-title="Carregar arquivo de checklist">
                 <input id="load-checklist-file" type="file" accept=".10min" hidden>
                 <i class="bi bi-file-earmark-arrow-up" style="font-size: 28px;"></i>
               </button>
