modified:   index.html 	new file:   public/img/preview1.jpg

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <title>Projeto ACS</title>
 </head>
 <body>
-    <div class="container-fluid fit-screen">
-        <div class="row g-5 fit-container">
-            <div class="col left-side">
-                <a href="/checklist"><img class="image" src="img/logo-branca.png" alt="Checklist 10 minutos"></a>
-            </div>  
-            <div class="col right-side">
-                <a href="/quiz">Acessar o quiz</a>
+    <div class="container-fluid fit-screen bg-body-secondary">
+        <div class="container-md bg-body">
+            <div class="row">
+                <div class="col g-5">
+                    <h4>Checklist 10 Minutos</h4>
+                    <p>Crie checklists por meio da web</p>
+                    <a href="/checklist" class="btn btn-primary">Começar agora</a>
+                </div>
+                <div class="col-8">
+                    <img src="/img/preview1.jpg" class="img-fluid" alt="Checklist"></img>
+                </div>
             </div>
         </div>
     </div>
