modified:   .depend/bootstrap/css/bootstrap.css 	new file:   index.css 	modified:   index.html 	modified:   index.js 	modified:   public/css/index.css 	new file:   public/img/placeholder.webp 	modified:   quiz/quiz.css 	modified:   quiz/quiz.html 	modified:   quiz/quiz.js

--- a/index.html
+++ b/index.html
@@ -12,15 +12,39 @@
 </head>
 <body>
     <div class="container-fluid fit-screen bg-body-secondary">
-        <div class="container-md bg-body">
-            <div class="row">
+        <header class="bottom-line">
+            <div class="row align-items-center">
+                <div class="col-4">
+                    <a href="/" style="font-size: 18px;">Projeto Educação contra o Aedes</a>
+                </div>
+                <div class="col-4 text-center">
+                   
+                </div>
+                <div class="col-4 text-center">
+                    <a href="/checklist" style="font-size: 18px;">Checklist</a>
+                    <a href="/quiz" style="font-size: 18px;">Quiz</a>
+                </div>
+            </div>
+        </header>
+        <div class="container-md bg-body rounded">
+            <div class="row border-b">
                 <div class="col g-5">
                     <h4>Checklist 10 Minutos</h4>
                     <p>Crie checklists por meio da web</p>
                     <a href="/checklist" class="btn btn-primary">Começar agora</a>
                 </div>
                 <div class="col-8">
-                    <img src="/img/preview1.jpg" class="img-fluid" alt="Checklist"></img>
+                    <img src="/img/preview1.jpg" class="img-fluid" alt="Checklist">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col g-5">
+                    <h4>Quiz Contra a Dengue</h4>
+                    <p>Teste seu conhecimento sobre o mosquito Aedes Aegypti e sobre o controle vetorial</p>
+                    <a href="/quiz" class="btn btn-primary">Desafiar</a>
+                </div>
+                <div class="col-8">
+                    <img src="/img/placeholder.webp" class="img-fluid" alt="Checklist">
                 </div>
             </div>
         </div>
