--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -36,6 +36,8 @@
                 <div id="answerBlock" class="text-center col-sm-10 row-cols-1 gy-5"></div> 
             </div>
 
+            <section class="correction-section"></section>
+
             <button id="btn-advance" class="btn btn-primary" style="margin-top: 12px;">
                 Avançar
             </button>
