deleted:    index.css 	modified:   index.html 	modified:   public/css/index.css 	modified:   quiz/quiz.css 	modified:   quiz/quiz.js

--- a/index.html
+++ b/index.html
@@ -6,31 +6,35 @@
     <link href="/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <script src="/js/bootstrap.bundle.min.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="/icon-font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css" type="text/css">
-    <title>Projeto ACS</title>
+    <title>Projeto ECV</title>
 </head>
 <body>
-    <div class="container-fluid fit-screen bg-body-secondary">
+    <div class="fit-screen bg-body-secondary">
         <header class="bottom-line">
             <div class="row align-items-center">
-                <div class="col-4">
-                    <a href="/" style="font-size: 18px;">Projeto Educação contra o Aedes</a>
+                <div class="col-4 changa-one-regular">
+                    <a href="/" style="font-size: 2rem;">Projeto Educação contra o Aedes</a>
                 </div>
                 <div class="col-4 text-center">
                    
                 </div>
-                <div class="col-4 text-center">
-                    <a href="/checklist" style="font-size: 18px;">Checklist</a>
-                    <a href="/quiz" style="font-size: 18px;">Quiz</a>
+                <div class="col-4 text-center space-x changa-one-regular">
+                    <a href="/checklist" style="font-size: 1.5rem;">Checklist</a>
+                    <a href="/quiz" style="font-size: 1.5rem;">Quiz</a>
                 </div>
             </div>
         </header>
-        <div class="container-md bg-body rounded">
+        <main class="container-md bg-body rounded">
             <div class="row border-b">
                 <div class="col g-5">
                     <h4>Checklist 10 Minutos</h4>
-                    <p>Crie checklists por meio da web</p>
+                    <p>Crie checklists 10 minutos contra a dengue por meio da web. Salve em seu computador</p>
                     <a href="/checklist" class="btn btn-primary">Começar agora</a>
                 </div>
                 <div class="col-8">
@@ -47,7 +51,10 @@
                     <img src="/img/placeholder.webp" class="img-fluid" alt="Checklist">
                 </div>
             </div>
-        </div>
+        </main>
+        <footer>
+            <h5>© 2024 SISCV</h5>
+        </footer>
     </div>
     
 </body>
